--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
+    "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^9.1.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.77.8"
@@ -10,7 +12,6 @@
   "dependencies": {
     "browser-sync": "^3.0.2",
     "concat": "^1.0.3",
-    "gulp": "^5.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-rename": "^2.0.0",
